Mantendo compatibilidade com java 1.8 e tratamento erro Connection or outbound has closed (#1151)
* Removendo ; duplicado e warn serial version

* Mantendo compatibilidade com java 1.8

* Removendo ; duplicado e warn serial version

* Mantendo compatibilidade com java 1.8

* Remove unused import statement

Removed unused import for LocalDate.

* Remove deprecated CST_210 and CST_510 entries

* Remove obsolete CST code assertions from tests

Removed assertions for CST codes 210001, 210002, and 210003 from tests.

* Enhance fromOM method to handle operation response

Resolvendo expection org.apache.axis2.databinding.ADBException: Unexpected subelement {http://www.portalfiscal.inf.br/nfe/wsdl/NFeAutorizacao4}nfeResultMsg

* Enhance fromOM method for better XML parsing

Resolvendo exception org.apache.axis2.databinding.ADBException: Unexpected subelement

Refactor fromOM method to handle child elements for NfeDadosMsg and NfeResultMsg parsing.

* Refactor fromOM method to handle child elements

Resolvendo exception org.apache.axis2.databinding.ADBException: Unexpected subelement

* Mantendo compatibilidade versão java 1.8

* Removendo CST obsoletos

* Removendo tratamento erro ADBException

* Removendo tratamento erro ADBException

* Removendo tratamento erro ADBException

* Desabilitando o uso de transferências chunked nas requisições HTTP
(NFeAutorizacao4Stub ja tem) Resolvendo erro intermitente manifesto
destinatário HTTPSenderImpl:215 - Unable to sendViaPost to
url[https://www.nfe.fazenda.gov.br/NFeRecepcaoEvento4/NFeRecepcaoEvento4.asmx]
org.apache.axis2.AxisFault: Connection or outbound has closed

---------

Co-authored-by: tecnosofti <tecnosofti@amdryzen>
Co-authored-by: Diego Fincatto <58352+fincatto@users.noreply.github.com>